crates/ir/tests/snapshots/lower_test__stdlib__question_mark_result_chain.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__question_mark_result_chain

declare println: (m) -> Unit

fn parse(v0: Int) -> Result[String, Int] =
  let v1: ~Result[String, Int] = construct Result::Ok#0(v0)
  v1

fn double(v2: Int) -> Result[String, Int] =
  let v3: Int = mul_int(v2, 2)
  let v4: ~Result[String, Int] = construct Result::Ok#0(v3)
  v4

fn process(v5: Int) -> Result[String, Int] =
  let_join v6(v7: Result[String, Int]) =
    v7
  in
  let_join v20(v8: Int) =
    let_join v19(v13: Int) =
      let v18: ~Result[String, Int] = construct Result::Ok#0(v13)
      v18
    in
    let v14: Result[String, Int] = call double(v8)
    switch v14 {
      0 (v15: Int) ->
        jump v19(v15)
      1 (v16: String) ->
        let v17: Result[String, Int] = construct Result::Err#1(v16)
        jump v6(v17)
    }
  in
  let v9: Result[String, Int] = call parse(v5)
  switch v9 {
    0 (v10: Int) ->
      jump v20(v10)
    1 (v11: String) ->
      let v12: Result[String, Int] = construct Result::Err#1(v11)
      jump v6(v12)
  }

fn main() -> Unit =
  let v21: Result[String, Int] = call process(21)
  switch v21 {
    0 (v22: b) ->
      let v23: Unit = call println(v22)
      v23
    1 (v24: a) ->
      let v25: Unit = call println(v24)
      v25
  }
