crates/ir/tests/snapshots/lower_test__stdlib__stdlib_io_roundtrip.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__stdlib_io_roundtrip

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
declare println: (o) -> Unit
declare read_file
declare write_file

fn handle(v0: Dict[core/show.Show, u8], v1: Dict[core/show.Show, v8], v2: Result[u8, v8]) -> Unit =
  switch v2 {
    0 (v3: v8) ->
      let v4: Unit = call println(v1, v3)
      v4
    1 (v5: u8) ->
      let v6: Unit = call println(v0, v5)
      v6
  }

fn main() -> Unit =
  let v7: Result[String, Unit] = call write_file("_test_tmp.txt", "hello from file")
  let v10: Result[String, String] = call read_file("_test_tmp.txt")
  let v8: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v9: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v11: Unit = call handle(v8, v9, v10)
  v11
